[gd_scene load_steps=5 format=3 uid="uid://c3lbr0mtr2ums"]

[ext_resource type="Script" path="res://Script/UI_layer/Opponent_info/Opponent_SCROLLH.gd" id="1_1ur1v"]
[ext_resource type="Script" path="res://Script/SCROLLH/HANDA.gd" id="2_uxle3"]
[ext_resource type="Script" path="res://Script/UI_layer/Opponent_info/Opponent_HandRect.gd" id="3_ny53w"]
[ext_resource type="PackedScene" uid="uid://cl4lbfvxcetie" path="res://Scenes/UI/Cardback.tscn" id="4_8q8fm"]

[node name="SCROLLH" type="ScrollContainer"]
offset_left = 343.0
offset_top = 69.0
offset_right = 1543.0
offset_bottom = 789.0
size_flags_vertical = 8
mouse_filter = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 0
script = ExtResource("1_1ur1v")

[node name="HANDA" type="BoxContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
clip_children = 1
custom_minimum_size = Vector2(1150, 360)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
mouse_filter = 2
script = ExtResource("2_uxle3")

[node name="SIZECHECK" type="PanelContainer" parent="HANDA"]
self_modulate = Color(0.376471, 1, 0.901961, 0)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HandRect" type="ColorRect" parent="HANDA/SIZECHECK"]
unique_name_in_owner = true
layout_direction = 1
layout_mode = 2
mouse_filter = 2
color = Color(1, 0, 0, 0.14902)
script = ExtResource("3_ny53w")
Cardback_scene = ExtResource("4_8q8fm")

[connection signal="child_entered_tree" from="HANDA/SIZECHECK/HandRect" to="HANDA" method="_on_hand_rect_child_entered_tree"]
[connection signal="child_exiting_tree" from="HANDA/SIZECHECK/HandRect" to="HANDA" method="_on_hand_rect_child_exiting_tree"]
